cmake_minimum_required(VERSION 3.10)

# Set the project name and version
project(MyProject VERSION 1.0)

# Specify the C++ standard
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)

# Include directories
include_directories(include)

# Add the executable
add_executable(my_project src/main.cpp)

# Add unit tests
enable_testing()
add_executable(test_exec tests/test_main.cpp)
add_test(NAME MyTests COMMAND test_exec)
